--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "oldchat",
+  "name": "rooms-server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "server": "node server",
-    "front": "http-server"
+    "server": "node server"
   },
   "author": "vanderrer",
   "license": "ISC",
   "dependencies": {
-    "http-server": "^0.12.3",
-    "ws": "^7.3.1"
+    "consola": "^2.15.0",
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
   }
 }
