--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "server": "node server"
+    "server-max": "pm2 start server.js -i max",
+    "server": "pm2 start server.js",
+    "stop-all": "pm2 stop all",
+    "delete-all": "pm2 delete all"
+    
+
   },
   "author": "vanderrer",
   "license": "ISC",
