--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "server": "pm2 start server.js",
     "stop-all": "pm2 stop all",
     "delete-all": "pm2 delete all"
-    
-
   },
   "author": "vanderrer",
   "license": "ISC",
   "dependencies": {
     "consola": "^2.15.0",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   }
