--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "consola": "^2.15.0",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "socket.io-redis": "^5.4.0"
   }
 }
